# RemedyLinter

./: .gitignore  BillOfMatetials.md  CMakeLists.txt  README.md  config.json  config1.json  file.h  formatter.h  output.tex  project.cpp  project.puml  rule.h  rules.h
.github/workflows/: c-cpp.yml  cmake.yml
headerfiles/: file.h  flags.h  formatter.h  formattingFixes.h  output.tex  progress.h  rule.h  rules.h
headerfiles/json/: allocator.h  forwards.h  json_features.h  jsoncpp.cpp  reader.h  value.h
tests/: tests.cpp
texfiles/: input.tex  section.tex  section1.tex  test.tex  test1.tex  test3.tex
